--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.10",
     "next": "9.5.5",
     "react": "17.0.1",
