feat(env):Added MONGO_DATABASE.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 MONGO_USERNAME=ENTER_YOUR_MONGO_USERNAME
 MONGO_PASSWORD=ENTER_YOUR_MONGO_PASSWORD
 MONGO_HOSTNAME=ENTER_YOUR_MONGO_HOSTNAME
+MONGO_DATABASE=ENTER_YOUR_MONGO_DATABASE
 GOOGLE_API_KEY=ENTER_YOUR_GOOGLE_API_KEY
