--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.10.10",
     "next": "9.5.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-player": "^2.6.2"
   }
 }
