--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -17,5 +18,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-player": "^2.6.2"
+  },
+  "devDependencies": {
+    "next-on-netlify": "^2.6.0"
   }
 }
